# efficiency-metrics

./: .gitignore  .pre-commit-config.yaml  3rd_step_plots.py  README.md  config.json  jira_workflow.py  requirements.txt  setup.cfg
.streamlit/: config.toml
app/: config.json  main.py  multi_page.py
app/databases/: data.db
app/pages/: cocomo.py  init_jira.py  jira_workflow.py  ml_pred.py  other_page.py  project_start.py  second_step_project.py  sql_utils.py  sqlite.py  third_step_plots.py  third_step_project.py  third_step_staff.py
databases/: data.db
src/efficiency_metrics/: config.py  jira_workflow.py  main.py  ml_pred.py  sql_utils.py
src/efficiency_metrics/pages/: cocomo.py  init_jira.py  project_start.py  second_step_project.py  sqlite.py  third_step_project.py  third_step_staff.py
