[metadata]
name = efficiency_metrics
version = 0.1.0
author = Kadmus Dev
author_email = denikozub@gmail.com
description = Efficiency metrics evaluation system.
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://github.com/kadmus-dev/efficiency_metrics/blob/main/README.md
    Source = https://github.com/kadmus-dev/efficiency_metrics

[options]
python_requires = >=3.8
packages = efficiency_metrics
package_dir =
    =src
zip_safe = no
install_requires =
    numpy
    pandas
    plotly
    scikit-learn
    streamlit
